cabal-version: >= 1.2.3
name: bindings-DSL
homepage: http://bitbucket.org/mauricio/bindings-dsl
synopsis:
  FFI domain specific language, on top of hsc2hs.
description: 
  This is a set of macros to be used when writing Haskell FFI.
  They were designed to be able to fully describe C interfaces,
  so that hsc2hs can extract from them all Haskell code needed to
  mimic such interfaces. All Haskell names used are automatically
  derived from C names, structures are mapped to Haskell instances
  of Storable, and there are also macros you can use with C code
  to help write bindings to inline functions or macro functions.
  Documentation is available at package homepage:
  .
  <http://bitbucket.org/mauricio/bindings-dsl>
  .
  This package contains no Haskell code, only C header files
  designed for hsc2hs.
version: 1.0.15
license: BSD3
license-file: LICENSE
maintainer: Maurício C. Antunes <mauricio.antunes@gmail.com>
author: Maurício C. Antunes
stability: Stable API, well tested, portable, used in comercial code.
build-type: Simple
bug-reports: http://bitbucket.org/mauricio/bindings-dsl/issues
category: FFI
library
  install-includes: bindings.dsl.h , bindings.cmacros.h
  build-depends: base >= 0 && < 1000
  exposed-modules: Bindings
