cabal-version: >= 1.8
name: bindings-DSL
homepage: https://github.com/jwiegley/bindings-dsl/wiki
synopsis:
  FFI domain specific language, on top of hsc2hs.
description: 
  This is a set of macros to be used when writing Haskell FFI.
  They were designed to be able to fully describe C interfaces,
  so that hsc2hs can extract from them all Haskell code needed to
  mimic such interfaces. All Haskell names used are automatically
  derived from C names, structures are mapped to Haskell instances
  of Storable, and there are also macros you can use with C code
  to help write bindings to inline functions or macro functions.
  Documentation is available at package homepage:
  .
  <https://github.com/jwiegley/bindings-dsl/wiki>
  .
  The extra module Bindings.Utilities will contain tools that may
  be convenient when working with FFI.
version: 1.0.24
license: BSD3
license-file: LICENSE
maintainer: John Wiegley <johnw@newartisans.com>
author: Maurício C. Antunes
stability: Stable API, well tested, portable, used in commercial code.
build-type: Simple
bug-reports: https://github.com/jwiegley/bindings-dsl/issues
category: FFI
extra-source-files: ChangeLog
library
  install-includes: bindings.dsl.h , bindings.cmacros.h
  build-depends: base >= 0 && < 1000
  exposed-modules: Bindings.Utilities
source-repository head
  type: git
  location: git://github.com/jwiegley/bindings-dsl
  branch: master
source-repository this
  type: git
  location: git://github.com/jwiegley/bindings-dsl
  tag: 1.0.24
