cabal-version: >= 1.8
name: bindings-directfb
synopsis:
  Project bindings-* raw interface to DirectFB
description:
  Low level bindings to DirectFB, part
  of the @bindings-*@ project. See:
  .
  <http://bitbucket.org/mauricio/bindings-dsl>
  .
  <http://directfb.org>
version: 0.2
license: BSD3
license-file: LICENSE
maintainer: Maurício C. Antunes <mauricio.antunes@gmail.com>
author: Maurício C. Antunes
build-type: Simple
bug-reports: http://bitbucket.org/mauricio/bindings-dsl/issues
category: FFI
library
  hs-source-dirs: src
  extensions:
    ForeignFunctionInterface
  build-depends:
    base >=3 && <5,
    bindings-DSL >=1.0.16 && <1.1,
    bindings-posix >=1.2.2 && <1.3
  exposed-modules:
    Bindings.DirectFB
    Bindings.DirectFB.IDirectFB
    Bindings.DirectFB.IDirectFBDataBuffer
    Bindings.DirectFB.IDirectFBDisplayLayer
    Bindings.DirectFB.IDirectFBEventBuffer
    Bindings.DirectFB.IDirectFBFont
    Bindings.DirectFB.IDirectFBGL
    Bindings.DirectFB.IDirectFBImageProvider
    Bindings.DirectFB.IDirectFBInputDevice
    Bindings.DirectFB.IDirectFBPalette
    Bindings.DirectFB.IDirectFBScreen
    Bindings.DirectFB.IDirectFBSurface
    Bindings.DirectFB.IDirectFBVideoProvider
    Bindings.DirectFB.IDirectFBWindow
    Bindings.DirectFB.Types
  pkgconfig-depends:
    directfb >=1.7 && <2
  c-sources: src/inlines.c
source-repository head
  type: git
  location: https://bitbucket.org/mauricio/bindings-dsl
  branch: master
  subdir: bindings-directfb
