cabal-version: >= 1.8
name: bindings-gpgme
homepage: https://github.com/jwiegley/bindings-dsl
synopsis:
  Project bindings-* raw interface to gpgme
description:
  Low level bindings to gpgme, part
  of the @bindings-*@ project. See:
  .
  <https://github.com/jwiegley/bindings-dsl>
  .
  <http://www.gnupg.org/related_software/gpgme>
version: 0.1.7
license: BSD3
license-file: LICENSE
maintainer: John Wiegley <johnw@newartisans.com>
author: Maurício C. Antunes
build-type: Simple
category: FFI
bug-reports: https://github.com/jwiegley/bindings-dsl/issues
library
  hs-source-dirs: src
  extensions:
    ForeignFunctionInterface
  build-depends:
    base >= 3 && < 5,
    bindings-DSL >= 1.0.16 && < 1.1
  exposed-modules:
    Bindings.Gpgme
  c-sources:
    src/inlines.c
  includes:
    gpgme.h
    gpg-error.h
  extra-libraries:
    gpgme
  cc-options: -D_FILE_OFFSET_BITS=64

source-repository head
  type: git
  location: git://github.com/jwiegley/bindings-dsl
  branch: master
  subdir: bindings-gpgme
