cabal-version: >= 1.8
name: bindings-libcddb
homepage: https://github.com/rethab/bindings-dsl
synopsis:
  Project bindings-* raw interface to libcddb
description:
  Low level bindings to libcddb, part
  of the @bindings-*@ project. See:
  .
  <https://github.com/rethab/bindings-dsl>
  .
  <http://libcddb.sourceforge.net>
version: 0.3.1
license: BSD3
license-file: LICENSE
maintainer: Reto <rethab@protonmail.ch>
author: Maurício C. Antunes
build-type: Simple
bug-reports: https://github.com/rethab/bindings-dsl/issues
category: FFI
library
  hs-source-dirs: src
  extensions:
    ForeignFunctionInterface
  build-depends:
    base >=3 && <5,
    bindings-DSL >= 1.0.16 && < 1.1
  exposed-modules:
    Bindings.Libcddb
    Bindings.Libcddb.Cddb
    Bindings.Libcddb.CddbCmd
    Bindings.Libcddb.CddbConn
    Bindings.Libcddb.CddbDisc
    Bindings.Libcddb.CddbError
    Bindings.Libcddb.CddbLog
    Bindings.Libcddb.CddbSite
    Bindings.Libcddb.CddbTrack
  pkgconfig-depends:
    libcddb >= 1.3.2
  c-sources: src/inlines.c
source-repository head
  type: git
  location: git://github.com/rethab/bindings-dsl
  branch: master
  subdir: bindings-libcddb
