cabal-version: >= 1.8
name: bindings-libffi
synopsis:
  Project bindings-* raw interface to libffi
description:
  Low level bindings to libffi, part
  of the @bindings-*@ project. See:
  .
  <https://github.com/jwiegley/bindings-dsl>
  .
  <http://sourceware.org/libffi>
version: 0.3.1
license: BSD3
license-file: LICENSE
maintainer: John Wiegley <johnw@newartisans.com>
author: Maurício C. Antunes
build-type: Simple
category: FFI
bug-reports: https://github.com/jwiegley/bindings-dsl/issues
library
  hs-source-dirs: src
  extensions:
    ForeignFunctionInterface
  build-depends:
    base >= 3 && <5,
    bindings-DSL >= 1.0.16 && < 1.1
  exposed-modules:
    Bindings.Libffi
  pkgconfig-depends: libffi >= 3.0.13
source-repository head
  type: git
  location: git://github.com/jwiegley/bindings-dsl
  branch: master
  subdir: bindings-libffi
