cabal-version: >= 1.8
name: bindings-posix
synopsis:
  Project bindings-* raw interface to Posix
description:
  Low level bindings to Posix standard library, part
  of the @bindings-*@ project. See:
  .
  <https://github.com/jwiegley/bindings-dsl>
  .
  <http://pubs.opengroup.org/onlinepubs/9699919799/idx/headers.html>
version: 1.2.7
license: BSD3
license-file: LICENSE
maintainer: John Wiegley <johnw@newartisans.com>
author: Maurício C. Antunes
bug-reports: https://github.com/jwiegley/bindings-dsl/issues
build-type: Simple
category: FFI
library
  hs-source-dirs: src
  extensions:
    ForeignFunctionInterface
  build-depends:
    base >= 3 && < 5,
    bindings-DSL >= 1.0.16 && < 1.1
  exposed-modules:
    Bindings.Posix
    Bindings.Posix.Errno
    Bindings.Posix.Fcntl
    Bindings.Posix.Locale
    Bindings.Posix.Regex
    Bindings.Posix.Signal
    Bindings.Posix.Sys
    Bindings.Posix.Sys.Mman
    Bindings.Posix.Sys.Select
    Bindings.Posix.Sys.Types
    Bindings.Posix.Sys.Utsname
    Bindings.Posix.Time
    Bindings.Posix.Unistd
  c-sources:
    src/Bindings/Posix/Sys/Select.c
    src/Bindings/Posix/Time.c
  cc-options:
    "-D_ISOC99_SOURCE"
    "-D_POSIX_C_SOURCE=200809L"
    "-D_XOPEN_SOURCE=600"
  extra-libraries: pthread
  if !os(osx)
    exposed-modules:
      Bindings.Posix.Mqueue
    extra-libraries: rt
source-repository head
  type: git
  location: git://github.com/jwiegley/bindings-dsl
  branch: master
  subdir: bindings-posix
