cabal-version: >= 1.8
name: bindings-sqlite3
synopsis:
  Project bindings-* raw interface to sqlite3
description:
  Low level bindings to sqlite3, part
  of the @bindings-*@ project. See:
  .
  <https://github.com/rethab/bindings-dsl>
  .
  <http://www.sqlite.org>
version: 1.0.4
license: BSD3
license-file: LICENSE
maintainer: Reto <rethab@protonmail.ch>
author: Maurício C. Antunes
build-type: Simple
category: FFI
bug-reports: https://github.com/rethab/bindings-dsl/issues
library
  hs-source-dirs: src
  extensions:
    ForeignFunctionInterface
  build-depends:
    base >=3 && < 5,
    bindings-DSL >= 1.0.16 && < 1.1
  exposed-modules:
    Bindings.Sqlite3
  pkgconfig-depends:
    sqlite3 >= 3.7.17
  c-sources: src/Bindings/Sqlite3.c
source-repository head
  type: git
  location: git://github.com/rethab/bindings-dsl
  branch: master
  subdir: bindings-sqlite3
