cabal-version: >= 1.8
name: regex-example
synopsis:
  Example used in bindings-DSL documentation.
version: 1.1
license: BSD3
license-file: LICENSE
maintainer: John Wiegley <johnw@newartisans.com>
author: Maurício C. Antunes
bug-reports: https://github.com/jwiegley/bindings-dsl/issues
build-type: Simple
category: FFI
library
  hs-source-dirs: src
  build-depends:
    base >= 3 && < 5,
    transformers >= 0.3 && < 0.4,
    bindings-posix >= 1.2.4
  exposed-modules:
    RegexExample
source-repository head
  type: git
  location: git://github.com/jwiegley/bindings-dsl
  branch: master
  subdir: regex-example
